  [Daniele Viganò]
  * Fixed 'oq abort' and always mark killed jobs as 'aborted'

  [Michele Simionato]
  * Made it possible to use in the Starmap tasks without a monitor argument
  * Stored the sigma and epsilon parameters for each event in event based
    and scenario calculations and extended the gmf_data exporter consequently
  * Fixed the realizations CSV exporter which was truncating the names of the
    GSIMs
  * Deprecated the XML exporters for hcurves, hmaps, uhs
  * Introduced a `sap.script` decorator
  * Used the WebExtractor in `oq importcalc`
  * Restored validation of the source_model_logic_tree.xml file
  * Raised an early error for missing occupants in the exposure
  * Added a check to forbid duplicate file names in the `uncertaintyModel` tag
  * Made it possible to store the asset loss table in the ebrisk calculator
    by specifying `asset_loss_table=true` in the job.ini
  * Added a flag `oq info --parameters` to show the job.ini parameters
  * Removed the `source_name` column from the disagg by source output

  [Rao Anirudh]
  * Fixed wrong investigation_time in the calculation of loss maps from
    loss curves

  [Robin Gee]
  * Added capability to optionally specify a `time_cutoff` parameter to
    declustering time window

  [Michele Simionato]
  * Merged the commands `oq plot_hmaps` and `oq plot_uhs` inside `oq plot`
  * Changed the storage of hazard curves and hazard maps to make it consistent
    with the risk outputs and Extractor-friendly

  [Chris Van Houtte]
  * Added necessary gsims to run the Canterbury Seismic Hazard Model
    in Gerstenberger et al. (2014)
  * Added a new gsim file mcverry_2006_chch.py to have the Canterbury-
    specific classes.
  * Added a new gsim file bradley_2013b.py to implement the
    Christchurch-specific modifications to the Bradley2013 base model.

  [Michele Simionato]
  * Added a check on the intensity measure types and levels in the job.ini,
    to make sure they are ordered by period